fix: :lipstick: Fix alignment of skeleton's items on mobile
Fix alignment of skeleton's items on mobile

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3691,7 +3691,7 @@
         background-color: $color-dark-green;
         z-index: 1;
 
-        @media (min-width: 870px) {
+        @media (min-width: 1024px) {
             display: flex;
             justify-content: center;
             width: 100%;
@@ -3711,7 +3711,7 @@
         padding: 3.125rem 0 0;
 
 
-        @media (min-width: 870px) {
+        @media (min-width: 1024px) {
             background-color: transparent;
             display: flex
         }
@@ -3721,13 +3721,14 @@
 
             .skeleton__word {
                 font-size: 1.875rem;
+                line-height: 2.5rem;
             }
         }
     }
 
     .skeleton--mobile {
 
-        @media (min-width: 870px) {
+        @media (min-width: 1024px) {
             display: none;
         }
     }
